fix navbar z-indexing

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,5 +1,6 @@
 .navSection {
     width: 100vw;
+    z-index: 100;
 }
 
 .navWrapper {
